syntax = "proto3";

import "common.proto";

package com.spectrum.workfolio.proto;

option java_multiple_files = true;
option java_package = "com.spectrum.workfolio.proto.turn_over";
option java_outer_classname = "TurnOverProto";

message TurnOverUpsertRequest {
  message TurnOverGoalRequest {
    message SelfIntroductionRequest {
      optional string id = 1;
      string question = 2;
      string content = 3;
    }

    message InterviewQuestionRequest {
      optional string id = 1;
      string question = 2;
      string answer = 3;
    }

    message CheckListRequest {
      optional string id = 1;
      bool checked = 2;
      string content = 3;
    }

    optional string id = 1;
    string reason = 2;
    string goal = 3;
    repeated SelfIntroductionRequest self_introductions = 4;
    repeated InterviewQuestionRequest interview_questions = 5;
    repeated CheckListRequest check_list = 6;
  }

  message TurnOverChallengeRequest {
    message JobApplicationRequest {
      message ApplicationStageRequest {
        optional string id = 1;
        ApplicationStage.ApplicationStageStatus status = 2;
        optional uint64 started_at = 3;
        string memo = 4;
      }

      string id = 1;
      string name = 2;
      string position = 3;
      string job_posting_title = 4;
      string job_posting_url = 5;
      optional uint64 started_at = 6;
      optional uint64 ended_at = 7;
      string application_source = 8;
      string memo = 9;
      repeated ApplicationStageRequest application_stages = 10;
    }

    optional string id = 1;
    repeated JobApplicationRequest job_applications = 2;
  }

  message TurnOverRetrospectiveRequest {
    optional string id = 1;
    string name = 2;
    uint32 salary = 3;
    string position = 4;
    string job_title = 5;
    string rank = 6;
    string department = 7;
    uint32 score = 8;
    string review_summary = 9;
    optional uint64 joined_at = 10;
    string work_type = 11;
    TurnOverRetrospective.EmploymentType employment_type = 12;
  }

  optional string id = 1;
  string name = 2;
  TurnOverGoalRequest turn_over_goal = 3;
  TurnOverChallengeRequest turn_over_challenge = 4;
  TurnOverRetrospectiveRequest turn_over_retrospective = 5;
}

message TurnOverListResponse {
  repeated TurnOver turn_overs = 1;
}

message TurnOverDetailListResponse {
  repeated TurnOverDetail turn_overs = 1;
}

message TurnOverResponse {
  TurnOver turn_over = 1;
}